fixed radio button issue and z-index issue

--- a/src/js/components/Card/styles.css
+++ b/src/js/components/Card/styles.css
@@ -61,6 +61,7 @@
 .appointmentList::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   background-color: #4285f4;
 }
 
@@ -87,6 +88,7 @@
 .medicationList::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   background-color: #4285f4;
 }
 
